@@ -1,3 +1,11 @@
+Wed May 11 21:20:24 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* tao/Alias_TypeCode.cpp (tao_marshal):
+	* tao/Alias_TypeCode_Static.cpp (tao_marshal):
+
+	  Account for the encoded CDR encapsulation length and byte
+	  order when calculating offset.
+
 Wed May 11 13:28:35 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* TAO_IDL/be/be_codegen.cpp (gen_stub_hdr_includes):
